[gd_scene load_steps=17 format=3 uid="uid://b07kvqsnajhdg"]

[ext_resource type="Script" path="res://Scripts/Interfaces/tutorial_dial_puzzle_interface.gd" id="1_4im1h"]
[ext_resource type="Texture2D" uid="uid://bh4bk6c6yf6l1" path="res://Imports/images/2d_ui_bg.png" id="2_lv12j"]
[ext_resource type="Script" path="res://Scripts/Interfaces/dial.gd" id="3_eotgj"]
[ext_resource type="Texture2D" uid="uid://cyl8g6pb7siy7" path="res://Imports/images/Dial-1.png.png" id="4_yre3u"]
[ext_resource type="Script" path="res://Scripts/Interfaces/dial_sprite_2d.gd" id="5_p8agi"]
[ext_resource type="FontFile" uid="uid://dcbx28e77cfxv" path="res://Imports/fonts/SpecialElite.ttf" id="6_l7hl5"]
[ext_resource type="Script" path="res://Scripts/Interfaces/dial_label.gd" id="7_ibn1a"]
[ext_resource type="Texture2D" uid="uid://cv1lelcu1ihtx" path="res://Textures/UI/rectangle_button.png" id="8_c6b22"]
[ext_resource type="Texture2D" uid="uid://dg782bcvxcxuh" path="res://Textures/UI/rectangle_button_pressed.png" id="9_63tul"]
[ext_resource type="Script" path="res://Scripts/Interfaces/tutorial_dial_puzzle_label.gd" id="10_6k52o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ceuvr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pux5x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aos3k"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ur123"]
texture = ExtResource("8_c6b22")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uqrc2"]
texture = ExtResource("9_63tul")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_artrl"]
texture = ExtResource("8_c6b22")

[node name="dial_puzzle_interface" type="Node2D"]
script = ExtResource("1_4im1h")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(1.08, 1.08)
texture = ExtResource("2_lv12j")

[node name="Dial" type="Button" parent="."]
offset_left = 146.0
offset_top = 459.0
offset_right = 354.0
offset_bottom = 667.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_ceuvr")
flat = true
script = ExtResource("3_eotgj")

[node name="Dial1Sprite" type="Sprite2D" parent="Dial"]
unique_name_in_owner = true
position = Vector2(100, 100)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_yre3u")
script = ExtResource("5_p8agi")

[node name="Dial1Label" type="Label" parent="Dial"]
layout_mode = 0
offset_left = 6.0
offset_top = 222.0
offset_right = 186.0
offset_bottom = 323.0
theme_override_colors/font_color = Color(0.737255, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_l7hl5")
theme_override_font_sizes/font_size = 100
text = "123"
script = ExtResource("7_ibn1a")

[node name="Dial2" type="Button" parent="."]
offset_left = 579.0
offset_top = 467.0
offset_right = 787.0
offset_bottom = 675.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_pux5x")
flat = true
script = ExtResource("3_eotgj")

[node name="Dial2Sprite" type="Sprite2D" parent="Dial2"]
position = Vector2(100, 100)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_yre3u")
script = ExtResource("5_p8agi")

[node name="Dial2Label" type="Label" parent="Dial2"]
layout_mode = 0
offset_left = 6.0
offset_top = 222.0
offset_right = 186.0
offset_bottom = 323.0
theme_override_colors/font_color = Color(0.737255, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_l7hl5")
theme_override_font_sizes/font_size = 100
text = "123"
script = ExtResource("7_ibn1a")

[node name="Dial3" type="Button" parent="."]
offset_left = 1025.0
offset_top = 454.0
offset_right = 1233.0
offset_bottom = 662.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_aos3k")
flat = true
script = ExtResource("3_eotgj")

[node name="Dial3Sprite" type="Sprite2D" parent="Dial3"]
position = Vector2(100, 100)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_yre3u")
script = ExtResource("5_p8agi")

[node name="Dial3Label" type="Label" parent="Dial3"]
layout_mode = 0
offset_left = 6.0
offset_top = 222.0
offset_right = 186.0
offset_bottom = 323.0
theme_override_colors/font_color = Color(0.737255, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_l7hl5")
theme_override_font_sizes/font_size = 100
text = "123"
script = ExtResource("7_ibn1a")

[node name="BackButton" type="Button" parent="."]
offset_left = 547.0
offset_top = 851.0
offset_right = 814.0
offset_bottom = 968.0
theme_override_colors/font_hover_pressed_color = Color(0.486275, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.12549, 0.0862745, 1)
theme_override_colors/font_pressed_color = Color(0.737255, 0, 0, 1)
theme_override_colors/font_color = Color(0.737255, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_l7hl5")
theme_override_font_sizes/font_size = 90
theme_override_styles/hover = SubResource("StyleBoxTexture_ur123")
theme_override_styles/pressed = SubResource("StyleBoxTexture_uqrc2")
theme_override_styles/normal = SubResource("StyleBoxTexture_artrl")
text = "Back"

[node name="DialPuzzleLabel" type="Label" parent="."]
offset_left = 102.0
offset_top = 132.0
offset_right = 1259.0
offset_bottom = 430.0
theme_override_colors/font_color = Color(0.737255, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("6_l7hl5")
theme_override_font_sizes/font_size = 100
text = "Incorrect Calibration"
script = ExtResource("10_6k52o")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
